Trello #449 Discourse tweaks - topic page - fix lock icon colour when title scrolls into the header area, move "restricted view" icon into the post area so that it doesn't create a horiz scrollbar (admins request)

--- a/assets/stylesheets/common/base/header.scss
+++ b/assets/stylesheets/common/base/header.scss
@@ -6,8 +6,6 @@
 
 
 .d-header {
-  background-color: $gray-sitepoint-header-bg-SP;
-
 
   // SP custom rule
   .container {
